--- a/src/exercise/04.md
+++ b/src/exercise/04.md
@@ -193,4 +193,4 @@ direct children of `root`.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=04%3A%20Creating%20custom%20components&em=gloria.laoye%40thoughtworks.com).
+[the feedback form](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=04%3A%20Creating%20custom%20components&em=gloria.laoye%40hotmail.co.ukgloria.laoye%40thoughtworks.com).
