--- a/src/exercise/07.md
+++ b/src/exercise/07.md
@@ -180,4 +180,4 @@ future workshop so look forward to it!
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=07%3A%20Rendering%20Arrays&em=gloria.laoye%40thoughtworks.com).
+[the feedback form](https://ws.kcd.im/?ws=React%20Fundamentals%20%E2%9A%9B&e=07%3A%20Rendering%20Arrays&em=gloria.laoye%40hotmail.co.ukgloria.laoye%40thoughtworks.com).
